--- a/index.html
+++ b/index.html
@@ -3,23 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <title>find Suitcase</title>
+  <link href="style.css" rel="stylesheet">
+  <script src="script.js"></script>
 </head>
 <body>
 
-<form action="http://localhost:5000/upload" enctype="multipart/form-data" method="POST"> 
-    <label for="name">Name: </label>
-   <input type="text" name="name"/>
-   <label for="f_name">First_Name: </label>
-   <input type="text" name="f_name"/>
-   <label for="flight">flight: </label>
-   <input type="text" name="flight"/>
+  <div class="forms">
+<form action="http://localhost/upload" enctype="multipart/form-data" method="POST"> 
+  
+  <label for="name"  >Name: </label>
+   <input type="text" name="name" class="info" id="info"/>
 
-   <input type="file" name="pic1" />
-   <input type="file" name="pic2" />
-   <input type="file" name="pic3" />
-   <input type="file" name="pic4" />
-   <input type="submit" value="Загрузить"/>
+   <label for="f_name" >First_Name: </label>
+   <input type="text" name="f_name" class="info"/>
+
+   <label for="flight" >Flight: </label>
+   <input type="text" name="flight" class="info"/>
+    
+  
+   <input type="file" name="pic1" class="button"/>
+   <input type="file" name="pic2" class="button"/>
+   <input type="file" name="pic3" class="button"/>
+   <input type="file" name="pic4" class="button"/>
+
+   <input type="submit" value="Загрузить" class="dbut"/>
 </form>
+</div>
 
 
  
