make app for login

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
    <input type="file" name="pic2" class="button"/>
    <input type="file" name="pic3" class="button"/>
    <input type="file" name="pic4" class="button"/>
-
+  <img src="http://192.168.0.101/getphoto/1/K2pncE1ea1ZqDCvu" width="300" height="300">
    <input type="submit" value="Загрузить" class="dbut"/>
 </form>
 </div>
