--- a/web/index.html
+++ b/web/index.html
@@ -14,11 +14,17 @@
   <label for="name"  >Name: </label>
    <input type="text" name="name" class="info" id="name"/>
 
-   <label for="f_name" >First_Name: </label>
-   <input type="text" name="f_name" class="info" id="fname"/>
+   <label for="surname" >Surname: </label>
+   <input type="text" name="surname" class="info" id="surname"/>
+
+   <label for="patronymics" >Patronymics: </label>
+   <input type="text" name="patronymics" class="info" id="patronymics"/>
 
    <label for="flight" >Flight: </label>
    <input type="text" name="flight" class="info" id="flight"/>
+
+   <label for="weight" >Weight: </label>
+   <input type="text" name="weight" class="info" id="weight"/>
 
    <button class="info" id="send" style="width: 320px;" onclick="myFunction()">Загрузить</button>
    <button class="info" id="send" style="width: 320px;" onclick="mekaphoto()">Cделать Фото</button>
